changed the name to Arinze

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <div id="wrapper">
-      <h1>Today is Kamsi's birthday</h1>
+      <h1>Today is Arinze's birthday</h1>
       <img id="birthday-img" src="images/IMG_6663.JPG" />
       <h2 id="bday-age">22 years old</h2>
       <h4 id="bday-date">06.1.2022</h4>
